k3s/apps/lactose.identity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lactose-identity
  namespace: lactose
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lactose-identity
  template:
    metadata:
      labels:
        app: lactose-identity
    spec:
      containers:
      - name: lactose-identity
        image: ghcr.io/dynamiquel/lactose-identity:staging
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        volumeMounts:
        - name: lactose-identity-certs
          mountPath: /etc/ssl/certs/internal
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      volumes:
      - name: lactose-identity-certs
        secret:
          secretName: lactose-identity-tls-secret
      - name: lactose-local-ca
        secret:
          secretName: internal.root.tls
          items:
          - key: ca.crt
            path: ca.crt
          
---
apiVersion: v1
kind: Service
metadata:
  name: lactose-identity-service
  namespace: lactose
  labels:
    app: lactose-identity
spec:
  selector:
    app: lactose-identity
  ports:
  - port: 443
    targetPort: 443
    name: https
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lactose-identity-http
  namespace: lactose
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`lactose2.mookrata.ovh`) && PathPrefix(`/identity`)
    services:
    - kind: Service
      name: lactose-identity-service
      scheme: https
      port: 443
      serversTransport: lactose-identity-transport
  tls:
    certResolver: external.issuer
    secretName: lactose.mookrata.ovh.tls
