k3s/apps/lactose.mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lactose-mosquitto
  namespace: lactose
  labels:
    app: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: ghcr.io/dynamiquel/mosquitto-go-auth:staging
        ports: 
        - containerPort: 443
        volumeMounts:
        - name: mosquitto-config-volume
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
        - name: mosquitto-config-volume
          mountPath: /mosquitto/config/auth/go-auth.conf
          subPath: go-auth.conf
        - name: mosquitto-config-volume
          mountPath: /mosquitto/config/auth/checkAcl.js
          subPath: checkAcl.js
        - name: mosquitto-config-volume
          mountPath: /mosquitto/config/auth/checkSuperUser.js
          subPath: checkSuperUser.js
        - name: mosquitto-config-volume
          mountPath: /mosquitto/config/auth/checkUser.js
          subPath: checkUser.js
        - name: mosquitto-certs
          mountPath: /etc/ssl/certs/internal
          readOnly: true
        resources:
          requests:
            memory: 128Mi
            cpu: 200m
          limits:
            memory: 512Mi
            cpu: 1000m
      volumes:
      - name: mosquitto-config-volume
        configMap:
          name: lactose-mosquitto-config
      - name: mosquitto-certs
        secret:
          secretName: lactose-mosquitto-tls-secret

---
apiVersion: v1
kind: Service
metadata:
  name: lactose-mosquitto-service
  namespace: lactose
spec:
  selector:
    app: mosquitto
  ports:
  - port: 443
    targetPort: 443
    name: ws
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lactose-mosquitto-http-strip-prefix
  namespace: lactose
spec:
  stripPrefix:
    prefixes:
      - /mqtt

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lactose-mosquitto-http
  namespace: lactose
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`lactose2.mookrata.ovh`) && PathPrefix(`/mqtt`)
    services:
    - kind: Service
      name: lactose-mosquitto-service
      scheme: https
      port: 443
      serversTransport: lactose-mosquitto-transport
    middlewares:
      - name: lactose-mosquitto-http-strip-prefix
        namespace: lactose
  tls:
    certResolver: external.issuer
    secretName: lactose.mookrata.ovh.tls
