k3s/apps/lactose.simulation.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lactose-simulation
  namespace: lactose
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lactose-simulation
  template:
    metadata:
      labels:
        app: lactose-simulation
    spec:
      containers:
      - name: lactose-simulation
        image: ghcr.io/dynamiquel/lactose-simulation:staging
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        securityContext:
          runAsUser: 0
        command: ["sh", "-c"]
        args:
          - |
            set -ex 
            apt-get update
            apt-get install -y ca-certificates
            mkdir -p /usr/local/share/ca-certificates/internal/
            cp /etc/ssl/certs/internal/ca.crt /usr/local/share/ca-certificates/internal/ca.crt
            update-ca-certificates
            exec su -p app -c "dotnet LactoseSimulation.dll"
        volumeMounts:
        - name: lactose-simulation-certs
          mountPath: /etc/ssl/certs/internal
          readOnly: true
        resources:
          requests:
            memory: 128Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 500m
      volumes:
      - name: lactose-simulation-certs
        secret:
          secretName: lactose-simulation-tls-secret
      - name: lactose-local-ca
        secret:
          secretName: internal.root.tls
          items:
          - key: ca.crt
            path: ca.crt
          
---
apiVersion: v1
kind: Service
metadata:
  name: lactose-simulation-service
  namespace: lactose
  labels:
    app: lactose-simulation
    metrics: lactose.net
spec:
  selector:
    app: lactose-simulation
  ports:
  - port: 443
    targetPort: 443
    name: https
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lactose-simulation-http
  namespace: lactose
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`lactose2.mookrata.ovh`) && PathPrefix(`/simulation`)
    services:
    - kind: Service
      name: lactose-simulation-service
      scheme: https
      port: 443
      serversTransport: lactose-simulation-transport
  tls:
    certResolver: external.issuer
    secretName: lactose.mookrata.ovh.tls
