k3s/apps/landing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: lactose
spec:
  replicas: 3
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
      - name: landing
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: landing-html
          mountPath: /usr/share/nginx/html/
          readOnly: true
        - name: landing-nginx-config
          mountPath: /etc/nginx/
          readOnly: true
        resources:
          requests:
            memory: 16Mi
            cpu: 50m
          limits:
            memory: 32Mi
            cpu: 100m
      volumes:
      - name: landing-html
        configMap:
          name: landing-config
          items:
          - key: index.html
            path: index.html
      - name: landing-nginx-config
        configMap:
          name: landing-config
          items:
          - key: nginx.conf
            path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  namespace: lactose
spec:
  selector:
    app: landing
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: landing-ingressroute
  namespace: lactose
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`lactose2.mookrata.ovh`) && Path(`/`)
    kind: Rule
    services:
    - name: landing-service
      port: 80
  - match: Host(`localhost`)
    kind: Rule
    services:
    - name: landing-service
      port: 80
  tls:
    certResolver: external.issuer
    secretName: lactose.mookrata.ovh.tls
